--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^2.5.0",
     "chai": "^4.3.6",
+    "chai-bn": "^0.3.1",
     "web3-utils": "^1.7.3"
   },
   "dependencies": {
-    "bn-chai": "^1.0.1",
     "mocha": "^10.0.0",
     "solc": "^0.5.0"
   }
