--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "web3-utils": "^1.7.3"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.8",
+    "dotenv": "^16.0.1",
     "mocha": "^10.0.0",
     "solc": "^0.5.0"
   }
